--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Freixo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -51,8 +51,62 @@
     <!--FIN NAVBAR-->
 
     <!--INICIO CAROUSEL SECTION-->
-    <section>
-        
+    <section class="card_section mt-5">
+        <div class="d-flex justify-content-center">
+            <h3>Categorias</h3>
+        </div>
+        <div class="container mt-5">
+            <div class="row g-3">
+                <div class="col-md-6 col-md-6 col-xl-4">
+                    <div class="card">
+                        <img src="./assets/img/escalera.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Sillas y Sillones</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                 Est cupiditate cum magni incidunt exercitationem corporis enim, 
+                                 accusamus neque obcaecati sunt nisi nulla dolorem fuga dolor?</p>
+                            <button class="btn btn-primary">Ver Más</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-md-6 col-xl-4">
+                    <div class="card">
+                        <img src="./assets/img/galeria.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Sillas y Sillones</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                 Est cupiditate cum magni incidunt exercitationem corporis enim, 
+                                 accusamus neque obcaecati sunt nisi nulla dolorem fuga dolor?</p>
+                            <button class="btn btn-primary">Ver Más</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-md-6 col-xl-4">
+                    <div class="card">
+                        <img src="./assets/img/mesa.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Sillas y Sillones</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                 Est cupiditate cum magni incidunt exercitationem corporis enim, 
+                                 accusamus neque obcaecati sunt nisi nulla dolorem fuga dolor?</p>
+                            <button class="btn btn-primary">Ver Más</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="col-md-6 col-md-6 col-xl-4">
+                    <div class="card">
+                        <img src="./assets/img/galeria.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Sillas y Sillones</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                 Est cupiditate cum magni incidunt exercitationem corporis enim, 
+                                 accusamus neque obcaecati sunt nisi nulla dolorem fuga dolor?</p>
+                            <button class="btn btn-primary">Ver Más</button>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+        </div>
     </section>
     <!--FIN CAROUSEL SECTION-->
 
