--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <title>Freixo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <a href="" target="_blank" class="float">
+        <i class="bi bi-whatsapp"></i>
+    </a>
     <!--INICIO NAVBAR-->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
@@ -43,9 +47,10 @@
         </div>
     </nav>
     <section class="hero-section">
-        <div class="container d-flex align-items-center justify-content-center fs-1 text-white flex-column">
-            <h1>Todo a tu medida</h1>
-            <h2>alksjdklasj</h2>
+        <div class="container d-flex justify-content-center align-items-center fs-1 flex-column text-white">
+            <p>Freixo</p>
+            <h2>Trabajos a medida</h2>
+            
         </div>
     </section>
     <!--FIN NAVBAR-->
@@ -61,7 +66,7 @@
                     <div class="card">
                         <img src="./assets/img/escalera.png" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Sillas y Sillones</h5>
+                            <h5 class="card-title">Sillas y Banquetas</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                  Est cupiditate cum magni incidunt exercitationem corporis enim, 
                                  accusamus neque obcaecati sunt nisi nulla dolorem fuga dolor?</p>
@@ -73,7 +78,7 @@
                     <div class="card">
                         <img src="./assets/img/galeria.png" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Sillas y Sillones</h5>
+                            <h5 class="card-title">Mesas</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                  Est cupiditate cum magni incidunt exercitationem corporis enim, 
                                  accusamus neque obcaecati sunt nisi nulla dolorem fuga dolor?</p>
@@ -85,7 +90,7 @@
                     <div class="card">
                         <img src="./assets/img/mesa.png" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Sillas y Sillones</h5>
+                            <h5 class="card-title">Estantes</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                  Est cupiditate cum magni incidunt exercitationem corporis enim, 
                                  accusamus neque obcaecati sunt nisi nulla dolorem fuga dolor?</p>
@@ -109,6 +114,32 @@
         </div>
     </section>
     <!--FIN CAROUSEL SECTION-->
+
+    <!--INICIO FOOTER SECTION-->
+       <footer>
+        <div class="container-fluid mt-5 py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1 class="text-center">Freixo</h1>
+                        <p class="text-center"><i class="bi bi-geo-alt-fill"></i> Miguel Lillo, Yerba Buena, Tucumán</p>
+                    </div>
+                    <div class="col">
+                        <h1 class="text-center">Redes Sociales</h1>
+                        <p class="text-center"><a target="_blank" href="https://www.instagram.com/freixo.tuc?igsh=MXU3MGI1Y2JwN21xMg=="><i class="bi bi-instagram"></i></a> Instagram</p>
+                        <p class="text-center"><a target="_blank" href="https://www.facebook.com/people/Freixo/100063633369102/?mibextid=WC7FNe&rdid=lrc3cj4qGPcZuT7P&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F64F7v5D3XU1ae4H2%2F%3Fmibextid%3DWC7FNe"><i class="bi bi-facebook"></i></a> Facebook</p>
+                    </div>
+                    <div class="col">
+                        <h1 class="text-center">Contacto</h1>
+                        <p class="text-center"><a href="#"><i class="bi bi-envelope"></i></a> Correo</p>
+                        <p class="text-center"><a href="https://wa.me/message/OYIO3UWSGHDMI1" target="_blank"><i class="bi bi-whatsapp"></i></a> Whatsapp</p>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+       </footer>
+    <!--FIN FOOTER SECTION-->
 
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
