--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="" target="_blank" class="float">
+    <a href="https://wa.me/message/OYIO3UWSGHDMI1" target="_blank" class="float">
         <i class="bi bi-whatsapp"></i>
     </a>
     <!--INICIO NAVBAR-->
