cambios home y cards

--- a/index.html
+++ b/index.html
@@ -60,58 +60,34 @@
         <div class="d-flex justify-content-center">
             <h3>Categorias</h3>
         </div>
-        <div class="container mt-5">
-            <div class="row g-3">
-                <div class="col-md-6 col-md-6 col-xl-4">
-                    <div class="card">
-                        <img src="./assets/img/escalera.png" class="card-img-top" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title">Sillas y Banquetas</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                 Est cupiditate cum magni incidunt exercitationem corporis enim, 
-                                 accusamus neque obcaecati sunt nisi nulla dolorem fuga dolor?</p>
-                            <button class="btn btn-primary">Ver Más</button>
-                        </div>
-                    </div>
+        <div class="card-container">
+            <div class="card">
+                <img src="./assets/img/escalera.png" alt="">
+                <div class="card-body">
+                    <h1 class="card-title">Interiores</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, enim!</p>
+                    <button class="btn btn-primary">Ver Más</button>
                 </div>
-                <div class="col-md-6 col-md-6 col-xl-4">
-                    <div class="card">
-                        <img src="./assets/img/galeria.png" class="card-img-top" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title">Mesas</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                 Est cupiditate cum magni incidunt exercitationem corporis enim, 
-                                 accusamus neque obcaecati sunt nisi nulla dolorem fuga dolor?</p>
-                            <button class="btn btn-primary">Ver Más</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-md-6 col-xl-4">
-                    <div class="card">
-                        <img src="./assets/img/mesa.png" class="card-img-top" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title">Estantes</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                 Est cupiditate cum magni incidunt exercitationem corporis enim, 
-                                 accusamus neque obcaecati sunt nisi nulla dolorem fuga dolor?</p>
-                            <button class="btn btn-primary">Ver Más</button>
-                        </div>
-                    </div>
-                </div>
-                <!-- <div class="col-md-6 col-md-6 col-xl-4">
-                    <div class="card">
-                        <img src="./assets/img/galeria.png" class="card-img-top" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title">Sillas y Sillones</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                 Est cupiditate cum magni incidunt exercitationem corporis enim, 
-                                 accusamus neque obcaecati sunt nisi nulla dolorem fuga dolor?</p>
-                            <button class="btn btn-primary">Ver Más</button>
-                        </div>
-                    </div>
-                </div> -->
             </div>
-        </div>
+
+            <div class="card">
+                <img src="./assets/img/sillas_verdes.jpeg" alt="">
+                <div class="card-body">
+                    <h1 class="card-title">Sillas y Banquetas</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, enim!</p>
+                    <button class="btn btn-primary">Ver Más</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./assets/img/mesa.png" alt="">
+                <div class="card-body">
+                    <h1 class="card-title">Mesas</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, enim!</p>
+                    <button class="btn btn-primary">Ver Más</button>
+                </div>
+            </div>
+        </div>  
     </section>
     <!--FIN CAROUSEL SECTION-->
 
@@ -122,18 +98,17 @@
                 <div class="row">
                     <div class="col">
                         <h1 class="text-center">Freixo</h1>
-                        <p class="text-center"><i class="bi bi-geo-alt-fill"></i> Miguel Lillo, Yerba Buena, Tucumán</p>
+                        <p class="text-center"><i class="bi bi-geo-alt-fill"></i> Yerba Buena, Tucumán</p>
                     </div>
                     <div class="col">
-                        <h1 class="text-center">Redes Sociales</h1>
-                        <p class="text-center"><a target="_blank" href="https://www.instagram.com/freixo.tuc?igsh=MXU3MGI1Y2JwN21xMg=="><i class="bi bi-instagram"></i></a> Instagram</p>
-                        <p class="text-center"><a target="_blank" href="https://www.facebook.com/people/Freixo/100063633369102/?mibextid=WC7FNe&rdid=lrc3cj4qGPcZuT7P&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F64F7v5D3XU1ae4H2%2F%3Fmibextid%3DWC7FNe"><i class="bi bi-facebook"></i></a> Facebook</p>
+                        <h1 class="text-center">Redes</h1>
+                        <p class="text-center"><a target="_blank" href="http://www.instagram.com/freixo.tuc?igsh=MXU3MGI1Y2JwN21xMg=="><i class="bi bi-instagram"></i></a> <a target="_blank" class="text-white text-decoration-none" href="http://www.instagram.com/freixo.tuc?igsh=MXU3MGI1Y2JwN21xMg==">Instagram</a></p>
+                        <p class="text-center"><a target="_blank" href="https://www.facebook.com/people/Freixo/100063633369102/?mibextid=WC7FNe&rdid=lrc3cj4qGPcZuT7P&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F64F7v5D3XU1ae4H2%2F%3Fmibextid%3DWC7FNe"><i class="bi bi-facebook"></i></a> <a target="_blank" class="text-white text-decoration-none" href="https://www.facebook.com/people/Freixo/100063633369102/?mibextid=WC7FNe&rdid=lrc3cj4qGPcZuT7P&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F64F7v5D3XU1ae4H2%2F%3Fmibextid%3DWC7FNe">Facebook</a></p>
                     </div>
                     <div class="col">
                         <h1 class="text-center">Contacto</h1>
                         <p class="text-center"><a href="#"><i class="bi bi-envelope"></i></a> Correo</p>
-                        <p class="text-center"><a href="https://wa.me/message/OYIO3UWSGHDMI1" target="_blank"><i class="bi bi-whatsapp"></i></a> Whatsapp</p>
-                        
+                        <p class="text-center"><a target="_blank" href="https://wa.me/message/OYIO3UWSGHDMI1"><i class="bi bi-whatsapp"></i></a> <a target="_blank" class="text-white text-decoration-none" href="https://wa.me/message/OYIO3UWSGHDMI1">Whatsapp</a></p>
                     </div>
                 </div>
             </div>
