--- a/productDetail.html
+++ b/productDetail.html
@@ -4,22 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./assets/img/Perfil pagina.png" type="image/x-icon">
-    <title>Freixo</title>
+    <title>Producto detalle</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <a href="https://wa.me/message/OYIO3UWSGHDMI1" target="_blank" class="float">
-        <i class="bi bi-whatsapp"></i>
-    </a>
     <!--INICIO NAVBAR-->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="./assets/img/Logo_blanco.png" alt=""></a>
+            <a class="navbar-brand" href="index.html"><img src="./assets/img/Logo_blanco.png" alt=""></a>
             <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,80 +42,55 @@
             </div>
         </div>
     </nav>
-    <section class="hero-section">
-        <div class="container d-flex justify-content-center align-items-center fs-1 flex-column text-white">
-            <p>Freixo</p>
-            <h2>Trabajos a medida</h2>
-            
-        </div>
-    </section>
     <!--FIN NAVBAR-->
 
-    <!--INICIO CARDS SECTION-->
-    <section class="card_section mt-5">
-        <div class="d-flex justify-content-center">
-            <h3>Categorias</h3>
+    <div class="container product-detail">
+        <div class="row">
+          <div class="col-md-6">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./assets/img/bodegas/6.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/img/bodegas/2.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/img/bodegas/5.png" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            <!-- <img src="./assets/img/percheros/2.png" alt="Product Image" class="product-image img-fluid"> -->
+          </div>
+          <div class="col-md-6 product-info">
+            <h2 class="text-white">Perchero Freixo</h2>
+            <p class="text-white">Percheros</p>
+            <h4>$00.00</h4>
+            <p class="product-description">
+              Esta es una descripción detallada del producto. Se puede añadir info sobre características y cualquier otra info.
+            </p>
+            <a target="_blank" href="https://wa.me/message/OYIO3UWSGHDMI1"><button class="btn btn-primary btn-lg">Comprar</button></a>
+          </div>
         </div>
-        <div class="card-container">
-            <div class="card">
-                <img src="./assets/img/escalera.png" alt="">
-                <div class="card-body">
-                    <h1 class="card-title">Interiores</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, enim!</p>
-                    <button class="btn btn-primary">Ver Más</button>
-                </div>
-            </div>
+        <div class="row mt-5">
+          <!-- <div class="col-12">
+            <h3>Detalles del Producto</h3>
+            <p>
+              Aquí puedes añadir más información detallada sobre el producto, incluyendo especificaciones técnicas, materiales, dimensiones, instrucciones de cuidado, etc.
+            </p>
+          </div> -->
+        </div>
+      </div>
 
-            <div class="card">
-                <img src="./assets/img/sillas_verdes.jpeg" alt="">
-                <div class="card-body">
-                    <h1 class="card-title">Sillas y Banquetas</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, enim!</p>
-                    <button class="btn btn-primary">Ver Más</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assets/img/mesa.png" alt="">
-                <div class="card-body">
-                    <h1 class="card-title">Mesas</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, enim!</p>
-                    <button class="btn btn-primary">Ver Más</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assets/img/estantes/3.png" alt="">
-                <div class="card-body">
-                    <h1 class="card-title">Estantes</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, enim!</p>
-                    <button class="btn btn-primary">Ver Más</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assets/img/percheros/3.png" alt="">
-                <div class="card-body">
-                    <h1 class="card-title">Percheros</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, enim!</p>
-                    <button class="btn btn-primary">Ver Más</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assets/img/bodegas/8.png" alt="">
-                <div class="card-body">
-                    <h1 class="card-title">Bodegas</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, enim!</p>
-                    <button class="btn btn-primary"><a class="text-decoration-none text-white" href="productDetail.html">Ver Más</a></button>
-                </div>
-            </div>
-        </div>  
-    </section>
-    <!--FIN CAROUSEL SECTION-->
-
-    <!--INICIO FOOTER SECTION-->
-       <footer>
+    <!-- <footer>
         <div class="container-fluid mt-5 py-5">
             <div class="container">
                 <div class="row">
@@ -140,8 +111,7 @@
                 </div>
             </div>
         </div>
-       </footer>
-    <!--FIN FOOTER SECTION-->
+       </footer> -->
 
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
