--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -118,6 +120,38 @@
     </section>
     <!--FIN CAROUSEL SECTION-->
 
+    <!--INICIO CONTACT FORM-->
+    <section class="formulario">
+        <div class="container mt-5">
+            <div class="row justify-content-center">
+              <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
+                <h2 class="text-center mb-4">Contacto</h2>
+                <form id="form" action="https://api.web3forms.com/submit" method="POST">
+                    <input type="hidden" name="access_key" value="26901b24-97a5-425b-a699-8bc2a45b3308">
+                  <div class="form-row">
+                    <div class="form-group col-md-10">
+                      <input type="text" class="form-control" required name="name" placeholder="Ingresa tu nombre">
+                    </div>
+                    <div class="form-group col-md-10">
+                      <input type="email" class="form-control mt-3" required name="email" placeholder="Ingresa tu correo electrónico">
+                    </div>
+                  </div>
+                  <div class="form-group col-md-10">
+                    <input type="text" class="form-control mt-3" required name="subject" placeholder="Ingresa el asunto">
+                  </div>
+                  <div class="form-group col-md-10">
+                    <textarea class="form-control mt-3" required name="message" rows="4" placeholder="Escribe tu mensaje"></textarea>
+                  </div>
+                  <div class="d-flex justify-content-center pt-4">
+                    <button type="submit" class="btn btn-primary btn-block text-white">Enviar</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+    </section>
+    <!--FIN CONTACT FORM-->
+
     <!--INICIO FOOTER SECTION-->
        <footer>
         <div class="container-fluid mt-5 py-5">
@@ -134,7 +168,7 @@
                     </div>
                     <div class="col">
                         <h1 class="text-center">Contacto</h1>
-                        <p class="text-center"><a href="#"><i class="bi bi-envelope"></i></a> Correo</p>
+                        <p class="text-center text-white"><a href="#"><i class="bi bi-envelope"></i></a> Correo</p>
                         <p class="text-center"><a target="_blank" href="https://wa.me/message/OYIO3UWSGHDMI1"><i class="bi bi-whatsapp"></i></a> <a target="_blank" class="text-white text-decoration-none" href="https://wa.me/message/OYIO3UWSGHDMI1">Whatsapp</a></p>
                     </div>
                 </div>
