--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="container mt-5">
             <div class="row justify-content-center">
               <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
-                <h2 class="text-center mb-4">Contacto</h2>
+                <h2 class="text-center mb-4">Escribinos</h2>
                 <form id="form" action="https://api.web3forms.com/submit" method="POST">
                     <input type="hidden" name="access_key" value="26901b24-97a5-425b-a699-8bc2a45b3308">
                   <div class="form-row">
